main.css
body {
	width: 100%;
	height: 100%;
	background-color: #E5E5E5;
}

.wrapper {
	width: 540px;
	height: 960px;
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -270px;
	margin-top: -362px;
	/* margin: 118px 690px; */
	background-color: #FFFFFF;
	border: 1px solid #AACDFF;
	box-sizing: border-box;
	box-shadow: 7px 7px 39px rgba(0, 104, 255, 0.25);
	border-radius: 20px;
}

.title {
	width: 380px;
	height: 47px;
	margin: 50px 82px 30px 78px;
	font-family: 'Noto Sans CJK KR';
	font-style: normal;
	font-weight: 700;
	font-size: 32px;
	line-height: 47px;
	color: #0068FF;
}

.boxes input {
	width: 380px;
	height: 60px;
	margin: 20px 82px 0px 78px;
	padding: 18px 102.75px 18px 14.68px;
	background-color: #FFFFFF;
	border: 1px solid #0068FF;
	box-sizing: border-box;
	border-radius: 7px;
	font-family: 'Noto Sans CJK KR';
	font-style: normal;
	font-weight: 400;
	font-size: 16px;
	line-height: 24px;
	color: #797979;
}

.phone {
	width: 380px;
	height: 40px;
	display: flex;
	margin: 20px 82px 20px 78px;
}

.phone input {
	width: 100px;
	height: 40px;
	background-color: #FFFFFF;
	border: 1px solid #D2D2D2;
	box-sizing: border-box;
	border-radius: 7px;
}

.phone div {
	width: 11px;
	height: 0px;
	margin: 10px 14px;
	font-size: 20px;
}

.auth {
	display: flex;
}

.timer {
	display: flex;
}

.auth div {
	width: 60px;
	height: 27px;
	margin: 6px 0px 20px 257px;
	font-family: 'Noto Sans CJK KR';
	font-style: normal;
	font-weight: 400;
	font-size: 18px;
	line-height: 27px;
	text-align: right;
	color: #0068FF;
}

.auth button {
	width: 120px;
	height: 40px;
	margin: 0px 82px 20px 21px;
	padding: 8px 0px;
	background-color: #F1F1F1;
	border: 1px solid #D2D2D2;
	box-sizing: border-box;
	border-radius: 7px;
}

.timer div {
	width: 35px;
	height: 27px;
	margin: 8px 5px 20px 277px;
	font-family: 'Noto Sans CJK KR';
	font-style: normal;
	font-weight: 400;
	font-size: 18px;
	line-height: 27px;
	text-align: right;
	color: #0068FF;
}

.timer button {
	width: 120px;
	height: 40px;
	margin: 0px 82px 20px 21px;
	background-color: #F1F1F1;
	border: 1px solid #D2D2D2;
	box-sizing: border-box;
	border-radius: 7px;
}

.area select {
	width: 380px;
	height: 60px;
	margin: 0px 82px 0px 78px;
	padding: 18px 102.75px 18px 14.68px;
	background: #FFFFFF;
	border: 1px solid #D2D2D2;
	box-sizing: border-box;
	border-radius: 7px;
	font-family: 'Noto Sans CJK KR';
	font-style: normal;
	font-weight: 400;
	font-size: 16px;
	line-height: 24px;
	color: #797979;
}

.gender {
	text-align: center;
	margin: 10px 200px 0px 200px;
	font-family: 'Noto Sans CJK KR';
	font-style: normal;
	font-weight: 400;
	font-size: 16px;
	line-height: 24px;
	color: #000000;
}

.line {
	width: 380px;
	height: 1px;
	margin: 20px 80px 20px 80px;
	background: #E6E6E6;
}

.signUp button {
	width: 380px;
	height: 75px;
	margin: 0px 80px 53.06px 80px;
	padding: 24px 126px;
	background: #F1F1F1;
	border: 1px solid;
	box-sizing: border-box;
	border-radius: 10px;
	position: absolute;
	font-family: 'Noto Sans CJK KR';
	font-style: normal;
	font-weight: 400;
	font-size: 18px;
	line-height: 27px;
	text-align: center;
}

button{
	cursor: pointer;
	height: 30px;
}

.error{
	font-size: 1px;
	height: 10px;
	text-align: center;
	display: flex;
	justify-content: center;
	align-items: center;
	color:red;
	font-weight: 700;
}

